# src/swagger.json
@@ -39,7 +39,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_IUser.Exclude_keyofIUser.role__": {
+			"UserInput": {
 				"properties": {
 					"username": {
 						"type": "string"
@@ -57,14 +57,7 @@
 					"password"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_IUser.role_": {
-				"$ref": "#/components/schemas/Pick_IUser.Exclude_keyofIUser.role__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
-			"UserInput": {
-				"$ref": "#/components/schemas/Omit_IUser.role_"
+				"additionalProperties": false
 			},
 			"EnrollmentEnum": {
 				"enum": [
@@ -107,7 +100,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_IEnrollment.Exclude_keyofIEnrollment.id-or-userId-or-courserId-or-enrolledAt__": {
+			"EnrollmentInput": {
 				"properties": {
 					"courseId": {
 						"type": "string"
@@ -122,18 +115,10 @@
 				},
 				"required": [
 					"courseId",
-					"status",
-					"canceledAt"
+					"status"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_IEnrollment.id-or-userId-or-courserId-or-enrolledAt_": {
-				"$ref": "#/components/schemas/Pick_IEnrollment.Exclude_keyofIEnrollment.id-or-userId-or-courserId-or-enrolledAt__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
-			"EnrollmentInput": {
-				"$ref": "#/components/schemas/Omit_IEnrollment.id-or-userId-or-courserId-or-enrolledAt_"
+				"additionalProperties": false
 			},
 			"ICourse": {
 				"properties": {
@@ -169,7 +154,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_ICourse.Exclude_keyofICourse.id__": {
+			"CourseInput": {
 				"properties": {
 					"name": {
 						"type": "string"
@@ -197,14 +182,7 @@
 					"imageURL"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_ICourse.id_": {
-				"$ref": "#/components/schemas/Pick_ICourse.Exclude_keyofICourse.id__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
-			"CourseInput": {
-				"$ref": "#/components/schemas/Omit_ICourse.id_"
+				"additionalProperties": false
 			},
 			"LoginInput": {
 				"properties": {
@@ -364,7 +342,17 @@
 							"type": "string"
 						}
 					}
-				]
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserInput"
+							}
+						}
+					}
+				}
 			},
 			"delete": {
 				"operationId": "Delete",
@@ -422,7 +410,9 @@
 						}
 					}
 				}
-			},
+			}
+		},
+		"/enrollments/{enrollmentId}": {
 			"patch": {
 				"operationId": "Cancel",
 				"responses": {
@@ -447,17 +437,16 @@
 						"jwt": []
 					}
 				],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"type": "string"
-							}
+				"parameters": [
+					{
+						"in": "path",
+						"name": "enrollmentId",
+						"required": true,
+						"schema": {
+							"type": "string"
 						}
 					}
-				}
+				]
 			}
 		},
 		"/courses": {
@@ -611,7 +600,17 @@
 							"type": "string"
 						}
 					}
-				]
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CourseInput"
+							}
+						}
+					}
+				}
 			},
 			"delete": {
 				"operationId": "Delete",
